// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrAccordionGroup renders correctly 1`] = `
<ul
  class="cdr-accordion-group"
>
  
  <li
    class="cdr-accordion"
    id="tab1-accordion"
  >
    <h2
      class="cdr-accordion__header"
    >
      <button
        aria-controls="tab1-collapsible"
        aria-expanded="false"
        class="cdr-accordion__button js-cdr-accordion-button"
        id="tab1"
      >
        <span
          class="cdr-accordion__label"
          id="tab1-label"
        >
          
          label1
          
        </span>
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-accordion__icon closed"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <path
            d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
            role="presentation"
          />
          
          <!--v-if-->
        </svg>
      </button>
    </h2>
    <div
      class="cdr-accordion__content-container closed"
      style="max-height: 0;"
    >
      <div
        aria-hidden="true"
        class="cdr-accordion__content closed"
        id="tab1-collapsible"
      >
        
        
      </div>
    </div>
  </li>
  <li
    class="cdr-accordion"
    id="tab2-accordion"
  >
    <h2
      class="cdr-accordion__header"
    >
      <button
        aria-controls="tab2-collapsible"
        aria-expanded="false"
        class="cdr-accordion__button js-cdr-accordion-button"
        id="tab2"
      >
        <span
          class="cdr-accordion__label"
          id="tab2-label"
        >
          
          label2
          
        </span>
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-accordion__icon closed"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <path
            d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
            role="presentation"
          />
          
          <!--v-if-->
        </svg>
      </button>
    </h2>
    <div
      class="cdr-accordion__content-container closed"
      style="max-height: 0;"
    >
      <div
        aria-hidden="true"
        class="cdr-accordion__content closed"
        id="tab2-collapsible"
      >
        
        
      </div>
    </div>
  </li>
  
</ul>
`;

exports[`CdrAccordionGroup renders correctly unwrapped 1`] = `
<ul
  class="cdr-accordion-group"
>
  <li>
    <div
      class=""
      id="tab1-accordion"
    >
      <h2
        class="cdr-accordion__header--unwrapped"
      >
        <div
          class="js-cdr-accordion-button"
          id="tab1"
        >
          <span
            class="cdr-accordion__label"
            id="tab1-label"
          >
            label1
          </span>
        </div>
      </h2>
      <div
        class="cdr-accordion__content-container open"
        style="max-height: none;"
      >
        <div
          class="cdr-accordion__content open cdr-accordion--unwrap"
          id="tab1-collapsible"
        />
      </div>
    </div>
  </li>
  <li>
    <div
      class=""
      id="tab2-accordion"
    >
      <h2
        class="cdr-accordion__header--unwrapped"
      >
        <div
          class="js-cdr-accordion-button"
          id="tab2"
        >
          <span
            class="cdr-accordion__label"
            id="tab2-label"
          >
            label2
          </span>
        </div>
      </h2>
      <div
        class="cdr-accordion__content-container open"
        style="max-height: none;"
      >
        <div
          class="cdr-accordion__content open cdr-accordion--unwrap"
          id="tab2-collapsible"
        />
      </div>
    </div>
  </li>
</ul>
`;
